# Wall-Placement-Project

./: README.md
src/: CMakeLists.txt  main.cpp  painting.cpp  painting.h  readInput.cpp  readInput.h  wallPlacement.cpp  wallPlacement.h
test/: input.txt
